- Allow to redefine some attribute of the source fields in the fields
  references. So the source fields are the default and can be modified by the
  reference.

0.7.1
=====
- Set value of the field always on rendering (Fixes issue with dropdown fields in view model
- Split loading and filtering of options. Make filtering option available as
  method for external applications.

0.7.0
=====
- Added new renderer to render a editor for formbar forms. The editor support
  depends on a service which will render the form. This is not part of the
  editor. See ringo version > 0.12.0 for an example. Renderer support a live
  preview of the form.
- Removed injected "eval_url" in the formbar.js file. The js file is now
  static. The eval url must now provided on form initialisation.
- Use ACE editor for formbar editor. (http://ace.c9.io/)

0.6.5
=====
- Added support for the "value" attribute in the form configuration to define
  a default value of the field. This attribute is also used for Infofields.
- Added support for the "and" and "or" operators in rules.
- Added another variable identifier "@" in filter definitons of selection
  renderers. Variables beginning with "@" indicate a attribute in the forms item.
- Added another variable identifier "$" in filter definitons of selection
  renderers. Variables beginning with "@" indicate a special values like
  "$user" for the current user of the request.
- Add renderer option "remove_filtered" to completely ignore filtered items in
  selection list rendering.

0.6.4
=====
- Fixed rule evaluation. Allow " and ' in rules.
- #5. Added basic filtering on selections. Currently only works on SQLAlchemy relations.

0.6.3
=====
- Workaroud for https://github.com/formencode/formencode/pull/58
- Added "rows" attribute for textarea. (Renderer attribute)
- Add option to provide a external service to evaluate rules.
- If external service for rule evaluation is defined use this service for
  client side evaluation.